--- a/tasks.json
+++ b/tasks.json
@@ -1,59 +1,1 @@
-{
-    "Ad hoc problems 1": {
-        "Intro problem": [
-            100
-        ],
-        "Easy problems": [
-            10019,
-            10050,
-            10469,
-            10473,
-            151,
-            10502
-        ],
-        "Harder problems": [
-            146,
-            10077,
-            12022
-        ]
-    },
-    "Ad hoc problems 2": {
-        "Easy problems": [
-            12602,
-            11547,
-            10921,
-            10703,
-            11340,
-            10528,
-            11044
-        ],
-        "Medium problems": [
-            837,
-            12605
-        ],
-        "Hard problems": [
-            12620,
-            12627
-        ]
-    },
-    "Data structure problems 1": {
-        "List-related problems": [
-            11988,
-            10935
-        ],
-        "Stack-related problems": [
-            514
-        ],
-        "Tree problems": [
-            699
-        ],
-        "Misc. problems": [
-            299,
-            296,
-            686
-        ],
-        "Hard problems": [
-            11234
-        ]
-    }
-}
+{"problemList":{"Ad hoc problems 1":{"Intro problem":[36],"Easy problems":[960,991,1410,1414,87,1443],"Harder problems":[82,1018,3173]},"Ad hoc problems 2":{"Easy problems":[4280,2542,1862,1644,2315,1469,1985],"Medium problems":[778,4283],"Hard problems":[4343,4352]},"Data structure problems 1":{"List-related problems":[3139,1876],"Stack-related problems":[455],"Tree problems":[640],"Misc. problems":[235,232,627],"Hard problems":[2175]}},"problems":{"36":{"num":100,"title":"The 3n + 1 problem"},"82":{"num":146,"title":"ID Codes"},"87":{"num":151,"title":"Power Crisis"},"232":{"num":296,"title":"Safebreaker"},"235":{"num":299,"title":"Train Swapping"},"455":{"num":514,"title":"Rails"},"627":{"num":686,"title":"Goldbach's Conjecture (II)"},"640":{"num":699,"title":"The Falling Leaves"},"778":{"num":837,"title":"Light and Transparencies"},"960":{"num":10019,"title":"Funny Encryption Method"},"991":{"num":10050,"title":"Hartals"},"1018":{"num":10077,"title":"The Stern-Brocot Number System"},"1410":{"num":10469,"title":"To Carry or not to Carry"},"1414":{"num":10473,"title":"Simple Base Conversion"},"1443":{"num":10502,"title":"Counting Rectangles"},"1469":{"num":10528,"title":"Major Scales"},"1644":{"num":10703,"title":"Free spots"},"1862":{"num":10921,"title":"Find the Telephone"},"1876":{"num":10935,"title":"Throwing cards away I"},"1985":{"num":11044,"title":"Searching for Nessy"},"2175":{"num":11234,"title":"Expressions"},"2315":{"num":11340,"title":"Newspaper"},"2542":{"num":11547,"title":"Automatic Answer"},"3139":{"num":11988,"title":"Broken Keyboard (a.k.a. Beiju Text)"},"3173":{"num":12022,"title":"Ordering T-shirts"},"4280":{"num":12602,"title":"Nice Licence Plates"},"4283":{"num":12605,"title":"Ripple Effect"},"4343":{"num":12620,"title":"Fibonacci Sum"},"4352":{"num":12627,"title":"Erratic Expansion"}}}
